Work around show-newly-submitted-post bug on iPhone 5
And remove show-sort-order-tips.

--- a/client/app/forms-and-dialogs.styl
+++ b/client/app/forms-and-dialogs.styl
@@ -496,36 +496,4 @@ form .dw-ntf
 
 
 
-// Tips
-//===========================
-
-
-// A tips on how replies are sorted, in the horizontal layout
-#dw-tps-sort-order
-  position: absolute
-  top: -210px
-  left: -250px
-  white-space: nowrap
-
-.dw-tps-sort-order-arw
-  position: relative
-  height: 15px
-  top: 8px
-  width: 55px
-  display: inline-block
-  margin: 0 10px 0 0
-  background: url(img/arrows-etcetera-gray.png) no-repeat 0 -327px
-
-.dw-tps-sort-order-arw.dw-flip-hz
-  margin: 0 0 0 10px
-
-.dw-tps-sort-order-your-post
-  white-space: normal
-  display: inline-block
-  max-width: 133px
-  text-align: center
-  vertical-align: middle
-
-
-
 // vim: fdm=marker et ts=2 sw=2 tw=100 fo=tcqwn list
